traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:5: error: not enough arguments for method marquerleSol: (cpt: Int)Int.
Unspecified value parameter cpt.
      marquerleSol()
                  ^TraversalByColumn:27: error: value += is not a member of Int
  cpt+=1;
     ^TraversalByColumn:28: error: type mismatch;
 found   : Unit
 required: Int
  ecritMessage(cpt)
              ^