traversal.column.traversalbycolumn.TraversalByColumn.scala.code
  override def run() {
		var cpt:Int =0
    ecritMessage(cpt)
    while(finalPos!=true){
      bougerPos()
      marquerleSol()
    }
  }

  def finalPos():Boolean={
    if(getX()==(getMondeLargeur-1) && getY()==(getMondeHauteur-1)){
      return true
    }
    else{
      return false
    }
  }
  def bougerPos(){
    if(getY()==getMondeHauteur-1){
      setPos(getX()+1,0)
    }
    else{
      setPos(getX(),getY()+1)
    }
  }

def marquerleSol(cpt:Int):Int={
  cpt+=1;
  ecritMessage(cpt)
}

